Update lib version v0.0.1

--- a/klobalx/build.gradle
+++ b/klobalx/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'maven-publish'
 }
 
 android {
@@ -58,4 +59,21 @@ dependencies {
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            maven(MavenPublication) {
+                groupId = 'com.mobillium'
+                artifactId = 'klobalx'
+                version = "0.0.1"
+                from components.release
+
+                pom {
+                    description = 'A Kotlin extension library'
+                }
+            }
+        }
+    }
 }
